@@ -56,8 +56,8 @@ lib/Test/Shared/Fixture/Wikibase/Datatype/Mediainfo/Commons/ImageOfHuman.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/MediainfoSnak/Commons/Depicts/Human.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/MediainfoStatement/Commons/Depicts/Human.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Property/Wikidata/InstanceOf.pm
-lib/Test/Shared/Fixture/Wikibase/Datatype/Reference/Wikidata/Fixture1.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Reference/Wikidata/ReferenceURL.pm
+lib/Test/Shared/Fixture/Wikibase/Datatype/Reference/Wikidata/VIAF.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Sense/Wikidata/Dog.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Snak/Wikidata/GivenName/Douglas.pm
 lib/Test/Shared/Fixture/Wikibase/Datatype/Snak/Wikidata/Image/Dog.pm
@@ -139,12 +139,12 @@ t/Test-Shared-Fixture-Wikibase-Datatype-MediainfoStatement-Commons-Depicts-Human
 t/Test-Shared-Fixture-Wikibase-Datatype-Property-Wikidata-InstanceOf/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Property-Wikidata-InstanceOf/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Property-Wikidata-InstanceOf/03-new.t
-t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-Fixture1/01-use.t
-t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-Fixture1/02-version.t
-t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-Fixture1/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-ReferenceURL/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-ReferenceURL/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-ReferenceURL/03-new.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-VIAF/01-use.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-VIAF/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-VIAF/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/03-new.t
@@ -414,10 +414,10 @@ xt/Test-Shared-Fixture-Wikibase-Datatype-MediainfoStatement-Commons-Depicts-Huma
 xt/Test-Shared-Fixture-Wikibase-Datatype-MediainfoStatement-Commons-Depicts-Human/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Property-Wikidata-InstanceOf/01-pod_coverage.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Property-Wikidata-InstanceOf/02-pod.t
-xt/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-Fixture1/01-pod_coverage.t
-xt/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-Fixture1/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-ReferenceURL/01-pod_coverage.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-ReferenceURL/02-pod.t
+xt/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-VIAF/01-pod_coverage.t
+xt/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-VIAF/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/01-pod_coverage.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/02-pod.t
 xt/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Douglas/01-pod_coverage.t
