@@ -4,7 +4,7 @@ use base qw(Wikibase::Datatype::Statement);
 use strict;
 use warnings;
 
-use Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::Fixture1;
+use Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::VIAF;
 use Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::InstanceOf::VersionEditionOrTranslation;
 use Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::Of::Poem;
 
@@ -19,7 +19,7 @@ sub new {
 			Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::Of::Poem->new,
 		],
 		'references' => [
-			Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::Fixture1->new,
+			Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::VIAF->new,
 		],
 	);
 
